Improved program configuration
Refined JSON settings loading and added backup creation with detailed change logging.
Updated the visual interface: adjusted icons, button styles, and minor UI improvements.
Overall codebase is now cleaner and more consistent.

--- a/prconfig.json
+++ b/prconfig.json
@@ -10,5 +10,20 @@
     },
     "paths": {
         "settings": "data/settings.json"
+    },
+    "gui": {
+        "style": {
+            "mainwindow": "qt5ui/style/mainwindow.css",
+            "settingswindow": "qt5ui/style/settingswindow.css"
+        }
+    },
+    "browser": {
+        "window": {
+            "width": 1024,
+            "height": 768,
+            "position_x": 100,
+            "position_y": 100
+        },
+        "path": "path"
     }
 }
