Added the search_links function for website searching. The function searches for websites using the provided text via DuckDuckGo, performing standard web search behavior.
Improved browser path verification to a safer, though slightly slower, approachAdded the search_links function for website searching.
The function searches for websites using the provided text via DuckDuckGo, performing standard web search behavior.

Improved browser path verification to a safer, though slightly slower, approach.

--- a/prconfig.json
+++ b/prconfig.json
@@ -24,6 +24,6 @@
             "position_x": 100,
             "position_y": 100
         },
-        "path": ""
+        "path": "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
     }
 }
